# katbook-api-py

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_rename_submolts_to_submeows.py
app/: config.py  database.py  dependencies.py  main.py
app/middleware/: auth.py  error_handler.py  rate_limit.py
app/models/: __init__.py  agent.py  comment.py  follow.py  post.py  submeow.py  subscription.py  vote.py
app/routers/: agents.py  comments.py  feed.py  posts.py  search.py  submeows.py  votes.py
app/schemas/: agent.py  comment.py  feed.py  post.py  search.py  submeow.py  vote.py
app/services/: agent_service.py  comment_service.py  feed_service.py  post_service.py  search_service.py  submeow_service.py  vote_service.py
app/utils/: errors.py  feed_algorithms.py  response.py  security.py
architecture/: TRUST_MODEL.md  architecture.md  architecture.puml
scripts/: seed.py
tests/: conftest.py  test_agents.py  test_comments.py  test_feed.py  test_posts.py  test_search.py  test_submolts.py  test_votes.py
